crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.8__jump_statements__break_outside_loop.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic[18]] 4:4..4:4: `break` statement outside of a loop
  error[lyra.semantic[18]] 7:6..7:6: `break` statement outside of a loop
---
unit (0 diagnostics)
