crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.8__jump_statements__continue_outside_loop.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic[19]] 4:4..4:4: `continue` statement outside of a loop
---
unit (0 diagnostics)
