crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.8__jump_statements__return_missing_value.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.return_missing_value] 4:4..4:4: non-void function must return a value
---
unit (0 diagnostics)
