crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.8__jump_statements__return_outside_callable.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.return_outside_callable] 4:4..4:4: `return` statement outside of a function or task
---
unit (0 diagnostics)
