crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.8__jump_statements__return_value_in_void.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic[21]] 4:4..4:4: cannot return a value from a void function or task
  error[lyra.semantic[21]] 9:4..9:4: cannot return a value from a void function or task
---
unit (0 diagnostics)
